# PACE-25-HS-heuristic

./: CMakeLists.txt  PACE_Solver_Description.pdf:Zone.Identifier  README.md  random_forest_model.onnx  rf_model.onnx
HiGHS/: .bazelrc  .clang-format  .gitattributes  .gitignore  BUILD.bazel  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  README.md  Version.txt  WORKSPACE  build_webdemo.sh  flake.nix  highs.pc.in  meson.build  meson_options.txt  pyproject.toml  version.rc.in
HiGHS/.coin-or/: projDesc.xml
HiGHS/app/: CLI11.hpp  CMakeLists.txt  HighsRuntimeOptions.h  RunHighs.cpp  highs_webdemo_shell.html
HiGHS/check/: Avgas.cpp  Avgas.h  CMakeLists.txt  HCheckConfig.h.bazel.in  HCheckConfig.h.in  HCheckConfig.h.meson.in  SpecialLps.h  TestAlienBasis.cpp  TestBasis.cpp  TestBasisSolves.cpp  TestCAPI.c  TestCallbacks.cpp  TestCheckSolution.cpp  TestCrossover.cpp  TestDualize.cpp  TestEkk.cpp  TestFactor.cpp  TestFilereader.cpp  TestFortranAPI.f90  TestHSet.cpp  TestHighsCDouble.cpp  TestHighsGFkSolve.cpp  TestHighsHash.cpp  TestHighsHessian.cpp  TestHighsIntegers.cpp  TestHighsModel.cpp  TestHighsParallel.cpp  TestHighsRbTree.cpp  TestHighsSparseMatrix.cpp  TestHighsVersion.cpp  TestICrash.cpp  TestIO.cpp  TestIis.cpp  TestInfo.cpp  TestIpm.cpp  TestIpx.cpp  TestLPFileFormat.cpp  TestLogging.cpp  TestLpModification.cpp  TestLpOrientation.cpp  (+27 more)
HiGHS/cmake/: CheckAtomic.cmake  FindCUDAConf.cmake  README.md  cpp-highs.cmake  dotnet.cmake  (+5 more)
classifier/: convert_rf_to_onnx.py  random_forest_classifier.py  requirements.txt
networkit/: .clang-format  .clang-tidy  .coveragerc  .gitignore  .gitmodules  CHANGES.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  check_code.sh  networkit.pc  pyproject.toml  requirements.txt  setup.py  version.py
src/: graph.cpp  graph.h  highs.cpp  highs.h  main.cpp  mlpredict.cpp  mlpredict.h  netkit.cpp  netkit.h  nusc.cpp  nusc.h  pace.cpp  pace.h  prune.cpp  prune.h  wscp.h
training/: e_081.csv  e_082.csv  e_083.csv  e_084.csv  e_085.csv  e_086.csv  e_087.csv  e_088.csv  e_089.csv  e_090.csv  e_091.csv  e_092.csv  e_093.csv  e_094.csv  e_095.csv  e_096.csv  e_097.csv  e_098.csv  e_099.csv  e_100.csv  e_21.csv  e_22.csv  e_23.csv  e_24.csv  e_25.csv  e_26.csv  e_27.csv  e_28.csv  e_29.csv  e_30.csv  e_31.csv  e_32.csv  e_33.csv  e_34.csv  e_35.csv  e_36.csv  e_37.csv  e_38.csv  e_39.csv  e_40.csv  (+178 more)
(+678 files in other folders)
